--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Data Pool</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="stylesheets/flexselect.css">
     <link rel="stylesheet" href="stylesheets/app.css" />
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
 
@@ -65,21 +66,213 @@
                 <div class="large-12 columns">
                   <label>Select keywords to compare</label>
                   <div class="check-clear">
-                    <select>
-                      <option value="">Select keyword #1</option>
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
+                    <select class="flexselect">
+                      <option value="" disabled selected>Select keyword #1</option>
+                      <option>traffic</option>
+                      <option>nairobisc</option>
+                      <option>flows</option>
+                      <option>nairobi</option>
+                      <option>kenya</option>
+                      <option>rndbt</option>
+                      <option>lol</option>
+                      <option>westlands</option>
+                      <option>its</option>
+                      <option>day</option>
+                      <option>love</option>
+                      <option>mombasa</option>
+                      <option>don</option>
+                      <option>haha</option>
+                      <option>hehe</option>
+                      <option>amp</option>
+                      <option>has</option>
+                      <option>waiyaki</option>
+                      <option>towards</option>
+                      <option>morning</option>
+                      <option>mama</option>
+                      <option>mayor</option>
+                      <option>foursquare</option>
+                      <option>moi</option>
+                      <option>man</option>
+                      <option>centre</option>
+                      <option>cbd</option>
+                      <option>home</option>
+                      <option>ave</option>
+                      <option>ngina</option>
+                      <option>life</option>
+                      <option>ith</option>
+                      <option>oexg</option>
+                      <option>today</option>
+                      <option>need</option>
+                      <option>after</option>
+                      <option>she</option>
+                      <option>hahaha</option>
+                      <option>mall</option>
+                      <option>shopping</option>
+                      <option>god</option>
+                      <option>never</option>
+                      <option>ousted</option>
+                      <option>happy</option>
+                      <option>got</option>
+                      <option>think</option>
+                      <option>want</option>
+                      <option>nyayo</option>
+                      <option>pic</option>
+                      <option>her</option>
+                      <option>house</option>
+                      <option>come</option>
+                      <option>really</option>
+                      <option>best</option>
+                      <option>area</option>
+                      <option>thanks</option>
+                      <option>near</option>
+                      <option>let</option>
+                      <option>hey</option>
+                      <option>miss</option>
+                      <option>smh</option>
+                      <option>great</option>
+                      <option>always</option>
+                      <option>kangemi</option>
+                      <option>hope</option>
+                      <option>ylvf</option>
+                      <option>jnctn</option>
+                      <option>rbcdd</option>
+                      <option>ylax</option>
+                      <option>bellevue</option>
+                      <option>rnlmry</option>
+                      <option>going</option>
+                      <option>yes</option>
+                      <option>road</option>
+                      <option>kwa</option>
+                      <option>wewe</option>
+                      <option>world</option>
+                      <option>better</option>
+                      <option>take</option>
+                      <option>night</option>
+                      <option>airport</option>
+                      <option>year</option>
+                      <option>him</option>
+                      <option>arsenal</option>
+                      <option>hehehe</option>
+                      <option>guys</option>
+                      <option>club</option>
+                      <option>yeah</option>
+                      <option>next</option>
+                      <option>someone</option>
+                      <option>leo</option>
+                      <option>thank</option>
+                      <option>big</option>
+                      <option>others</option>
+                      <option>town</option>
+                      <option>down</option>
+                      <option>ama</option>
+                      <option>university</option>
+                      <option>dont</option>
+                      <option>guy</option>
                     </select>
                   </div>
                   <div class="check-clear">
-                    <select>
-                      <option value="">Select keyword #2</option>
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
+                    <select class="flexselect">
+                      <option value="" disabled selected>Select keyword #2</option>
+                      <option>traffic</option>
+                      <option>nairobisc</option>
+                      <option>flows</option>
+                      <option>nairobi</option>
+                      <option>kenya</option>
+                      <option>rndbt</option>
+                      <option>lol</option>
+                      <option>westlands</option>
+                      <option>its</option>
+                      <option>day</option>
+                      <option>love</option>
+                      <option>mombasa</option>
+                      <option>don</option>
+                      <option>haha</option>
+                      <option>hehe</option>
+                      <option>amp</option>
+                      <option>has</option>
+                      <option>waiyaki</option>
+                      <option>towards</option>
+                      <option>morning</option>
+                      <option>mama</option>
+                      <option>mayor</option>
+                      <option>foursquare</option>
+                      <option>moi</option>
+                      <option>man</option>
+                      <option>centre</option>
+                      <option>cbd</option>
+                      <option>home</option>
+                      <option>ave</option>
+                      <option>ngina</option>
+                      <option>life</option>
+                      <option>ith</option>
+                      <option>oexg</option>
+                      <option>today</option>
+                      <option>need</option>
+                      <option>after</option>
+                      <option>she</option>
+                      <option>hahaha</option>
+                      <option>mall</option>
+                      <option>shopping</option>
+                      <option>god</option>
+                      <option>never</option>
+                      <option>ousted</option>
+                      <option>happy</option>
+                      <option>got</option>
+                      <option>think</option>
+                      <option>want</option>
+                      <option>nyayo</option>
+                      <option>pic</option>
+                      <option>her</option>
+                      <option>house</option>
+                      <option>come</option>
+                      <option>really</option>
+                      <option>best</option>
+                      <option>area</option>
+                      <option>thanks</option>
+                      <option>near</option>
+                      <option>let</option>
+                      <option>hey</option>
+                      <option>miss</option>
+                      <option>smh</option>
+                      <option>great</option>
+                      <option>always</option>
+                      <option>kangemi</option>
+                      <option>hope</option>
+                      <option>ylvf</option>
+                      <option>jnctn</option>
+                      <option>rbcdd</option>
+                      <option>ylax</option>
+                      <option>bellevue</option>
+                      <option>rnlmry</option>
+                      <option>going</option>
+                      <option>yes</option>
+                      <option>road</option>
+                      <option>kwa</option>
+                      <option>wewe</option>
+                      <option>world</option>
+                      <option>better</option>
+                      <option>take</option>
+                      <option>night</option>
+                      <option>airport</option>
+                      <option>year</option>
+                      <option>him</option>
+                      <option>arsenal</option>
+                      <option>hehehe</option>
+                      <option>guys</option>
+                      <option>club</option>
+                      <option>yeah</option>
+                      <option>next</option>
+                      <option>someone</option>
+                      <option>leo</option>
+                      <option>thank</option>
+                      <option>big</option>
+                      <option>others</option>
+                      <option>town</option>
+                      <option>down</option>
+                      <option>ama</option>
+                      <option>university</option>
+                      <option>dont</option>
+                      <option>guy</option>
                     </select>
                   </div>
                 </div>
@@ -181,8 +374,11 @@
     </div>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="js/liquidmetal.js" type="text/javascript"></script>
+    <script src="js/jquery.flexselect.js" type="text/javascript"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
+
     <script src="js/app.js"></script>
 
 
