--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   <label>Select keywords to compare</label>
                   <div class="check-clear">
                     <select class="flexselect">
-                      <option value="" disabled selected>Select keyword #1</option>
+                      <option disabled selected></option>
                       <option>traffic</option>
                       <option>nairobisc</option>
                       <option>flows</option>
@@ -172,7 +172,7 @@
                   </div>
                   <div class="check-clear">
                     <select class="flexselect">
-                      <option value="" disabled selected>Select keyword #2</option>
+                      <option disabled selected></option>
                       <option>traffic</option>
                       <option>nairobisc</option>
                       <option>flows</option>
