make data variable, make counts correct

--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
             <div class="large-3 columns">
               <div id="tweets" class="panel number text-center" data-equalizer-watch>
                 <i class="fa fa-twitter"></i>
-                <div class="content">
-                  25.121
+                <div id="count-tweets" class="content">
+                  -
                 </div>
                 <small>tweets</small>
               </div>
@@ -338,8 +338,8 @@
             <div class="large-3 columns">
               <div id="retweets" class="panel number text-center" data-equalizer-watch>
                 <i class="fa fa-retweet"></i>
-                  <div class="content">
-                    3.100
+                  <div id="count-retweets" class="content">
+                    -
                 </div>
                 <small>retweets</small>
               </div>
@@ -347,8 +347,8 @@
             <div class="large-3 columns">
               <div id="mentions" class="panel number text-center" data-equalizer-watch>
                 <i class="fa fa-comment"></i>
-                <div class="content">
-                  4.985
+                <div id="count-mentions" class="content">
+                  -
                 </div>
                 <small>mentions</small>
               </div>
@@ -356,8 +356,8 @@
             <div class="large-3 columns">
               <div id="users" class="panel number text-center" data-equalizer-watch>
                 <i class="fa fa-users"></i>
-                <div class="content">
-                  21.099
+                <div id="count-users" class="content">
+                  -
                 </div>
                 <small>users</small>
               </div>
