filter static pos

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       
       <div class="row margin-top">
         <div class="large-3 columns">
-          <div class="panel dashboard filters" data-magellan-expedition="fixed">
+          <div class="panel dashboard filters">
             <h6><i class="fa fa-filter"></i>Set your filters</h6>
             <form>
               <div class="row">
