form first attempt

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="large-12 columns">
                   <label>Select keywords to compare</label>
                   <div class="check-clear">
-                    <select class="flexselect">
+                    <select class="flexselect" id="keyword-0">
                       <option disabled selected></option>
                       <option>traffic</option>
                       <option>nairobisc</option>
@@ -172,7 +172,7 @@
                     </select>
                   </div>
                   <div class="check-clear">
-                    <select class="flexselect">
+                    <select class="flexselect" id="keyword-1">
                       <option disabled selected></option>
                       <option>traffic</option>
                       <option>nairobisc</option>
@@ -309,7 +309,7 @@
               </div>
               <div class="row">
                 <div class="large-12 columns margin-top">
-                  <a href="#" class="small button secondary">Go!</a>
+                  <a id="go" href="#" class="small button secondary">Go!</a>
                 </div>
               </div>
             </form>
