--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                 </div>
               </div>
               <div class="row">
-                <div class="large-12 columns">
+                <div class="large-12 columns keywords">
                   <label>Select keywords to compare</label>
                   <div class="check-clear">
-                    <select class="flexselect">
+                    <select id="key1" class="flexselect">
                       <option disabled selected></option>
                       <option>traffic</option>
                       <option>nairobisc</option>
@@ -172,7 +172,7 @@
                     </select>
                   </div>
                   <div class="check-clear">
-                    <select class="flexselect">
+                    <select id="key2" class="flexselect">
                       <option disabled selected></option>
                       <option>traffic</option>
                       <option>nairobisc</option>
