--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <link rel="stylesheet" href="stylesheets/jquery.timepicker.css">
     <link rel="stylesheet" href="stylesheets/app.css" />
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/nvd3/1.7.0/nv.d3.min.css" />
 
     <script src="bower_components/modernizr/modernizr.js"></script>
 
     <style>
-    #heatmap{
-        height: 200px;
+    #linechart svg{
+        width: 100%;
+        height: 400px;
     }
+
+
     </style>
 
   </head>
@@ -367,10 +371,7 @@
           <div class="row">
             <div class="large-12 columns">
               <div id="linechart" class="panel dashboard">
-                <h6><i class="fa fa-line-chart"></i>Comparison chart</h6>
-                <div class="content">
-                  <img src="img/difference-chart.svg">
-                </div>
+                <svg></svg>
               </div>
             </div>
           </div>
@@ -401,14 +402,12 @@
 
     <script src="js/app.js"></script>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/nvd3/1.7.0/nv.d3.min.js"></script>
     <script src="js/leaflet-heat.js"></script>
-    
-    <script src="js/dolly_data.js"></script>
+
     <script src="js/main.js"></script>
-
-
 
   </body>
 </html>
