--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="stylesheets/jquery.timepicker.css">
     <link rel="stylesheet" href="stylesheets/app.css" />
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/nvd3/1.7.0/nv.d3.min.css" />
+    <link rel="stylesheet" href="https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.css" />
 
     <script src="bower_components/modernizr/modernizr.js"></script>
 
@@ -206,9 +206,10 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/nvd3/1.7.0/nv.d3.min.js"></script>
+    <script src="https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.min.js"></script>
     <script src="js/leaflet-heat.js"></script>
-
+    <script src="js/datapool-map.js"></script>
+    <script src="js/datapool-line-chart.js"></script>
     <script src="js/main.js"></script>
 
   </body>
