default to max range on start

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <div class="row">
                     <div class="large-6 columns">
                       <div class="check-clear">
-                        <input type="text" id="from" name="from" placeholder="From date">
+                        <input type="text" id="from" name="from" placeholder="From date" value="2012-07-16">
                       </div>
                     </div>
                     <div class="large-6 columns">
@@ -102,7 +102,7 @@
                   <div class="row">
                     <div class="large-6 columns">
                       <div class="check-clear">
-                        <input type="text" id="to" name="to" placeholder="To date">
+                        <input type="text" id="to" name="to" placeholder="To date" value="2012-12-31">
                       </div>
                     </div>
                     <div class="large-6 columns">
