--- a/add_project.html
+++ b/add_project.html
@@ -53,7 +53,7 @@
               <div class="row">
                 <div class="large-12 columns">
                    <div class="margin-top">
-                    <input class="margin-top" id="project-name" type="text" placeholder="Project name">
+                    <input id="project-name" type="text" placeholder="Name your project">
                   </div>
                   <div id="datastreams">
                     <select id="datastreams0">
